# seal_rs

./: Cargo.toml  README.md  changelog.md
src/: lib.rs
src/actors/: abstract_actor_system.rs  actor.rs  actor_cell.rs  actor_context.rs  actor_ref.rs  actor_ref_factory.rs  actor_system.rs  dead_letters.rs  default_dispatcher.rs  dispatcher.rs  envelope.rs  local_actor_ref.rs  local_actor_system.rs  mailbox.rs  mod.rs  synthetic_actor.rs  unbound_mailbox.rs
src/common/: tsafe.rs
src/examples/: mod.rs
src/examples/actors/: mod.rs
src/examples/actors/basic/: example.rs
src/examples/actors/logger/: example.rs  file_writer.rs  logger.rs  stdout_writer.rs
src/examples/testkit/: bagsman.rs
src/executors/: execution_context.rs  mod.rs
src/futures/: promise.rs
src/testkit/actors/: test_local_actor_ref.rs  test_local_actor_system.rs  test_probe.rs
